# golitex

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE_TEMPLATE  L_Builtins.ts  L_Cache.ts  L_Checker.ts  L_Common.ts  L_DataStructures.ts  L_Env.ts  L_ErrorReport.ts  L_Examples.ts  L_Executor.ts  L_ExecutorHelper.ts  L_FactNodeHelpers.ts  L_FactStorage.ts  L_Facts.ts  L_Frontend.ts  L_Helpers.ts  L_Keywords.ts  L_Lexer.ts  L_Memory.ts  L_Messages.ts  L_Nodes.ts  L_OptSymbol.ts  L_Parser.ts  L_ParserTest.ts  L_Prove.ts  L_ReadmeExamples.ts  L_Report.ts  L_Run.ts  L_Runner.ts  L_Saver.ts  L_SetTheoryExamples.ts  L_SetTheoryTest.ts  L_Storage.ts  L_Structs.ts  L_Symbols.ts  (+46 more)
.cursor/: eval_fn.md
algo_executor/: algo_executor.go
arithmetic/: arith_mul.go
assets/: check_err_handling_patterns.sh  func_number.sh  implementations.md  logo.py  new_readme.md  old_readme.md  run_litexpy_checks.py  technical_blueprints.md  thoughts.md  tools.md  verifier_flow.mmd  words.md
ast/: ast_add_uniPrefix_to_Fc.go  ast_algo_stmt.go  ast_consts.go  ast_def_to_uniFact.go  ast_exe_return.go  ast_exist_equal_fact.go  ast_exist_fact.go  ast_exist_fact_struct.go  ast_exist_fact_with_free_params.go  ast_fc_to_latex.go  ast_firstclass_citizens.go  ast_fn_set_obj.go  ast_fn_template_methods.go  ast_fn_template_processor.go  ast_get_atoms.go  ast_have_set_by_replacement.go  ast_helper.go  ast_infer_ret.go  ast_inline_msg.go  ast_intensional_set_obj.go  ast_is_literally_number.go  ast_latex_helper.go  ast_latex_msg.go  ast_litex_to_latex_compiler_string.go  ast_makeFcIntoNumLitExpr.go  ast_makeObjIntoNumLitExpr.go  ast_messages.go  ast_new_Fact_ret.go  ast_obj.go  ast_obj_to_latex.go  ast_ordered_number_expr.go  ast_replace_fc.go  ast_replace_obj.go  ast_set_builder.go  ast_set_builder_obj.go  ast_short_return.go  ast_specFactEnum.go  ast_specFactType.go  ast_spec_fact_index_in_logic_expr.go  ast_specific_fact.go  (+27 more)
benchmarks/: README.md
binary/: linux_64_litex_0.1.0_beta  linux_litex  mac_litex  (+1 more)
cmp/: cmp_div.go  (+12 more)
(+2553 files in other folders)
