[package]
name = "litex-lang"
version = "0.9.76-beta"
edition = "2021"
description = "A simple formal proof language that writes math the way it looks"
license = "Apache-2.0"
repository = "https://github.com/litexlang/golitex"
homepage = "https://litexlang.com"
authors = ["Jiachen Shen"]
keywords = ["proof", "formal-verification", "theorem-prover", "mathematics"]
categories = ["command-line-utilities", "mathematics", "science"]
readme = "README.md"
exclude = [
    "litex/.binary/*",
    "assets/*",
    "examples/*",
    "doc/*",
    ".github/*",
]

[lib]
name = "litex"

[[bin]]
name = "litex"
path = "src/main.rs"

[dependencies]
